--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 version: "3.9"
 
- 
 services:
   config-server:
     build: ./config-server
@@ -24,33 +23,33 @@ services:
     networks:
       - spring-net
 
-  auth-service:
-    build: ./auth-service
-    container_name: auth-service
-    ports:
-      - "8081:8080"
-    depends_on:
-      - config-server
-      - discovery-server
-      - mysql
-      - redis
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    networks:
-      - spring-net
+#  auth-service:
+#    build: ./auth-service
+#    container_name: auth-service
+#    ports:
+#      - "8081:8080"
+#    depends_on:
+#      - config-server
+#      - discovery-server
+#      - mysql
+#      - redis
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    networks:
+#      - spring-net
 
-  user-service:
-    build: ./user-service
-    container_name: user-service
-    ports:
-      - "8082:8080"
-    depends_on:
-      - config-server
-      - discovery-server
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    networks:
-      - spring-net
+#  user-service:
+#    build: ./user-service
+#    container_name: user-service
+#    ports:
+#      - "8082:8080"
+#    depends_on:
+#      - config-server
+#      - discovery-server
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    networks:
+#      - spring-net
 
   order-service:
     build: ./order-service
@@ -65,41 +64,41 @@ services:
     networks:
       - spring-net
 
-  mysql:
-    image: mysql:8.0
-    container_name: mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_DATABASE=hotel_auth_db
-    ports:
-      - "3306:3306"
-    networks:
-      - spring-net
-    volumes:
-      - mysql-data:/var/lib/mysql
+#  mysql:
+#    image: mysql:8.0
+#    container_name: mysql
+#    environment:
+#      - MYSQL_ROOT_PASSWORD=password
+#      - MYSQL_DATABASE=hotel_auth_db
+#    ports:
+#      - "3306:3306"
+#    networks:
+#      - spring-net
+#    volumes:
+#      - mysql-data:/var/lib/mysql
 
-  redis:
-    image: redis:7-alpine
-    container_name: redis
-    ports:
-      - "6379:6379"
-    networks:
-      - spring-net
+#  redis:
+#    image: redis:7-alpine
+#    container_name: redis
+#    ports:
+#      - "6379:6379"
+#    networks:
+#      - spring-net
 
-  api-gateway:
-    build: ./api-gateway
-    container_name: api-gateway
-    ports:
-      - "8080:8080"
+#  api-gateway:
+#    build: ./api-gateway
+#    container_name: api-gateway
+#    ports:
+#      - "8080:8080"
 #    depends_on:
 #      - auth-service
 #      - user-service
 #      - order-service
 #      - discovery-server
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    networks:
-      - spring-net
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    networks:
+#      - spring-net
 
 networks:
   spring-net:
