--- a/order-service/src/main/resources/application-docker.yml
+++ b/order-service/src/main/resources/application-docker.yml
@@ -1,7 +1,7 @@
 # application-docker.yml
 
 server:
-  port: 0  # Spring Boot picks a random port
+  port: 8080  # Spring Boot picks a random port
 
 spring:
   application:
@@ -19,4 +19,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: "health,info"
