--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 spring.application.name=order-service
 
 # Run on port 8080 (or any free port)
-server.port=8080
+server.port=8083
 
 # Eureka Client settings
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
@@ -27,7 +27,7 @@ logging.level.org.springframework.cloud.netflix.eureka=INFO
 # Database
 spring.datasource.url=jdbc:mysql://localhost:3306/orderDB?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Shakib@12345
+spring.datasource.password=Shakib@40
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -36,4 +36,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.output.ansi.enabled=ALWAYS
 
 # ? Prefix every API with /api
-server.servlet.context-path=/order
+server.servlet.context-path=/api/order
