--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     build: ./config-server
     container_name: config-server
     ports:
-      - "8888:8888"   
+      - "${CONFIG_SERVER_PORT:-8888}:${CONFIG_SERVER_PORT:-8888}"   
     environment:
-      - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE:-docker}
     networks:
       - spring-net
 
@@ -15,11 +15,11 @@ services:
     build: ./discovery-server
     container_name: discovery-server
     ports:
-      - "8761:8761"   
+      - "${DISCOVERY_SERVER_PORT:-8761}:${DISCOVERY_SERVER_PORT:-8761}"   
     depends_on:
       - config-server
     environment:
-      - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE:-docker}
     networks:
       - spring-net
 
@@ -55,12 +55,13 @@ services:
    build: ./order-service
    container_name: order-service
    ports:
-     - "8083:8083"
+     - "${ORDER_SERVICE_PORT:-8083}:${ORDER_SERVICE_PORT:-8083}"
    depends_on:
      - config-server
      - discovery-server
    environment:
-     - SPRING_PROFILES_ACTIVE=docker
+     - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE:-docker}
+     - ORDER_DB_PASSWORD=${ORDER_DB_PASSWORD}
    networks:
      - spring-net
 
