--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -27,7 +27,7 @@ logging.level.org.springframework.cloud.netflix.eureka=INFO
 # Database
 spring.datasource.url=jdbc:mysql://localhost:3306/orderDB?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Shakib@40
+spring.datasource.password=${ORDER_DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
