--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,47 +1,40 @@
-server:
-  port: 8080
-
 spring:
   application:
     name: api-gateway
-  cloud:
-    gateway:
-      routes:
-        - id: auth-service
-          uri: lb://auth-service
-          predicates:
-            - Path=/auth/**
-          filters:
-            - StripPrefix=1
-        - id: user-service
-          uri: lb://user-service
-          predicates:
-            - Path=/users/**
-          filters:
-            - StripPrefix=1
-        - id: order-service
-          uri: lb://order-service
-          predicates:
-            - Path=/orders/**
-          filters:
-            - StripPrefix=1
-        - id: hotel-service
-          uri: lb://hotel-service
-          predicates:
-            - Path=/hotels/**
-          filters:
-            - StripPrefix=1
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: true
+  config:
+    import: "optional:configserver:http://config-server:8888"
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    prefer-ip-address: true
+cloud:
+  gateway:
+    routes:
+      - id: auth-service
+        uri: lb://auth-service
+        predicates:
+          - Path=/auth/**
+        filters:
+          - StripPrefix=1
+      - id: user-service
+        uri: lb://user-service
+        predicates:
+          - Path=/users/**
+        filters:
+          - StripPrefix=1
+      - id: order-service
+        uri: lb://order-service
+        predicates:
+          - Path=/orders/**
+        filters:
+          - StripPrefix=1
+      - id: hotel-service
+        uri: lb://hotel-service
+        predicates:
+          - Path=/hotels/**
+        filters:
+          - StripPrefix=1
+    discovery:
+      locator:
+        enabled: true
+        lower-case-service-id: true
 
 management:
   endpoints:
