--- a/config-server/src/main/resources/config/discovery-service-dev.yml
+++ b/config-server/src/main/resources/config/discovery-service-dev.yml
@@ -1,3 +1,4 @@
+# Production profile for Discovery Service
 server:
   port: 8761
 
@@ -6,14 +7,21 @@ spring:
     name: discovery-service
 
 eureka:
+  instance:
+    hostname: discovery-server
   client:
     register-with-eureka: false
     fetch-registry: false
+    service-url:
+      defaultZone: http://discovery-server:8761/eureka/
   server:
-    enable-self-preservation: true
-  instance:
-    lease-renewal-interval-in-seconds: 30
-    lease-expiration-duration-in-seconds: 90
+    enable-self-preservation: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
 logging:
   level:
