--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: discovery-service
   config:
-    import: optional:configserver:
+    import: "optional:configserver:"
   cloud:
     config:
       uri: http://localhost:8888
