--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
-  application:
-    name: discovery-service
-  config:
-    import: "optional:configserver:"
-  cloud:
-    config:
-      uri: http://localhost:8888
+   application:
+     name: discovery-service
+   config:
+    import: "optional:configserver:http://config-server:8888"
+
+
+ 
