--- a/config-server/src/main/resources/config/discovery-service-dev.yml
+++ b/config-server/src/main/resources/config/discovery-service-dev.yml
@@ -1,29 +1,90 @@
-# Production profile for Discovery Service
+# Development profile for Discovery Service
+# Configuration is loaded in the following order of precedence:
+# 1. GitHub Config (via config server)
+# 2. Local Config (config-server local files)
+# 3. Default values (in this file)
+
+# Default server configuration
 server:
   port: 8761
+  servlet:
+    context-path: /
 
+# Default application configuration
 spring:
   application:
     name: discovery-service
+  
+  # Config Server configuration
+  cloud:
+    config:
+      # First try to load from GitHub (public repository)
+      server:
+        git:
+          uri: https://github.com/Shakib40/spring-boot-microservices-hotel-management
+          default-label: master
+          search-paths: /
+          # No authentication needed for public repository
+          basedir: ${user.home}/config-repo
+          clone-on-start: true
+          force-pull: true
+          # If git fails, use local files
+          fail-fast: false
+      # Enable local file system fallback
+      server:
+        native:
+          search-locations: classpath:/config/{application},classpath:/config/
+      # Retry configuration for config server
+      retry:
+        max-attempts: 3
+        initial-interval: 2000
+        max-interval: 5000
+        multiplier: 1.5
 
+# Default Eureka Server Configuration
 eureka:
   instance:
-    hostname: discovery-server
+    hostname: localhost
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://discovery-server:8761/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
     enable-self-preservation: false
+    wait-time-in-ms-when-sync-empty: 0
+    response-cache-update-interval-ms: 5000
+    dashboard:
+      enabled: true
 
+# Default Actuator Endpoints
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+      cors:
+        allowed-origins: "*"
+        allowed-methods: "*"
+  endpoint:
+    health:
+      show-details: always
+    info:
+      env:
+        enabled: true
 
+# Default Logging Configuration
 logging:
   level:
-    com.netflix.eureka: INFO
-    com.netflix.discovery: INFO
+    root: INFO
+    org:
+      springframework: INFO
+      springframework.cloud: INFO
+    com:
+      netflix:
+        eureka: INFO
+        discovery: INFO
+
+ 
