--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 spring:
-   application:
-     name: discovery-service
-   config:
-    import: "optional:configserver:http://config-server:8888"
-
-
- 
+  application:
+    name: discovery-service
+  config:
+    import: optional:configserver:http://config-server:8888
+    retry:
+      max-attempts: 3
+      initial-interval: 2000
+      max-interval: 5000
+      multiplier: 1.5
