--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,36 +27,36 @@ services:
       - prod
     # restart: unless-stopped
 
-  order-service:
-    build: ./order-service
-    container_name: order-service
-    ports:
-      - "8083:8083"
-    depends_on:
-      - config-server
-      - discovery-server
-    networks:
-      - spring-net
-    profiles:
-      - dev
-      - prod
-    # restart: unless-stopped
+  # order-service:
+  #   build: ./order-service
+  #   container_name: order-service
+  #   ports:
+  #     - "8083:8083"
+  #   depends_on:
+  #     - config-server
+  #     - discovery-server
+  #   networks:
+  #     - spring-net
+  #   profiles:
+  #     - dev
+  #     - prod
+  #   # restart: unless-stopped
 
-  api-gateway:
-    build: ./api-gateway
-    container_name: api-gateway
-    ports:
-      - "8080:8080"
-    depends_on:
-      - config-server
-      - order-service
-      - discovery-server
-    networks:
-      - spring-net
-    profiles:
-      - prod
-      - dev
-    # restart: unless-stopped
+  # api-gateway:
+  #   build: ./api-gateway
+  #   container_name: api-gateway
+  #   ports:
+  #     - "8080:8080"
+  #   depends_on:
+  #     - config-server
+  #     - order-service
+  #     - discovery-server
+  #   networks:
+  #     - spring-net
+  #   profiles:
+  #     - prod
+  #     - dev
+  #   # restart: unless-stopped
 
 networks:
   spring-net:
