--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -2,16 +2,16 @@ server:
   port: 8888
 
 spring:
-  profiles:
-    active: native
   application:
     name: config-server
   cloud:
     config:
       server:
-        composite:
-          - type: native
-            search-locations: classpath:/config
+        git:
+          uri: https://github.com/Shakib40/spring-boot-microservices-config-hotel-management
+          default-label: main
+          search-paths: config
+          clone-on-start: true
 
 management:
   endpoints:
@@ -27,9 +27,8 @@ spring:
   cloud:
     config:
       server:
-        composite:
-          - type: native
-            search-locations: classpath:/config
+        git:
+          default-label: dev
 
 ---
 spring:
@@ -39,9 +38,5 @@ spring:
   cloud:
     config:
       server:
-        composite:
-          - type: native
-            search-locations: classpath:/config
-
-
-
+        git:
+          default-label: main
