--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -1,10 +1,59 @@
+# spring:
+#   application:
+#     name: discovery-service
+#   config:
+#     import: optional:configserver:http://config-server:8888
+#     retry:
+#       max-attempts: 3
+#       initial-interval: 2000
+#       max-interval: 5000
+#       multiplier: 1.5
+# a
+
+
 spring:
   application:
     name: discovery-service
-  config:
-    import: optional:configserver:http://config-server:8888
-    retry:
-      max-attempts: 3
-      initial-interval: 2000
-      max-interval: 5000
-      multiplier: 1.5
+
+ eureka:
+  instance:
+    hostname: localhost
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  server:
+    enable-self-preservation: false
+    wait-time-in-ms-when-sync-empty: 0
+    response-cache-update-interval-ms: 5000
+    dashboard:
+      enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+      cors:
+        allowed-origins: "*"
+        allowed-methods: "*"
+  endpoint:
+    health:
+      show-details: always
+    info:
+      env:
+        enabled: true
+
+logging:
+  level:
+    root: INFO
+    org:
+      springframework: INFO
+      springframework.cloud: INFO
+    com:
+      netflix:
+        eureka: INFO
+        discovery: INFO
