--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -4,6 +4,13 @@ spring:
   config:
     import: "optional:configserver:http://config-server:8888"
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://discovery-server:8761/eureka
+  instance:
+    prefer-ip-address: true
+
 cloud:
   gateway:
     routes:
