--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -1,30 +1,20 @@
-# spring:
-#   application:
-#     name: discovery-service
-#   config:
-#     import: optional:configserver:http://config-server:8888
-#     retry:
-#       max-attempts: 3
-#       initial-interval: 2000
-#       max-interval: 5000
-#       multiplier: 1.5
-# a
-
+server:
+  port: 8761
 
 spring:
   application:
     name: discovery-service
 
- eureka:
+eureka:
   instance:
-    hostname: localhost
+    hostname: discovery-server
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://discovery-server:8761/eureka
   server:
     enable-self-preservation: false
     wait-time-in-ms-when-sync-empty: 0
