--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,63 +1,25 @@
 version: "3.9"
 
 services:
-  # config-server:
-  #   build: ./config-server
-  #   container_name: config-server
-  #   ports:
-  #     - "8888:8888"
-  #   networks:
-  #     - spring-net
-  #   profiles:
-  #     - dev
-  #     - prod
-  #   # restart: unless-stopped
+  config-server:
+    build: ./config-server
+    container_name: config-server
+    ports:
+      - "8888:8888"
+    networks:
+      - spring-net
+ 
 
   discovery-server:
     build: ./discovery-server
     container_name: discovery-server
     ports:
       - "8761:8761"
-    # depends_on:
-    #   - config-server
+    depends_on:
+      - config-server
     networks:
       - spring-net
-    # profiles:
-    #   - dev
-    #   - prod
-    # restart: unless-stopped
-
-  # order-service:
-  #   build: ./order-service
-  #   container_name: order-service
-  #   ports:
-  #     - "8083:8083"
-  #   depends_on:
-  #     - config-server
-  #     - discovery-server
-  #   networks:
-  #     - spring-net
-  #   profiles:
-  #     - dev
-  #     - prod
-  #   # restart: unless-stopped
-
-  # api-gateway:
-  #   build: ./api-gateway
-  #   container_name: api-gateway
-  #   ports:
-  #     - "8080:8080"
-  #   depends_on:
-  #     - config-server
-  #     - order-service
-  #     - discovery-server
-  #   networks:
-  #     - spring-net
-  #   profiles:
-  #     - prod
-  #     - dev
-  #   # restart: unless-stopped
-
+ 
 networks:
   spring-net:
     driver: bridge
