--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -2,45 +2,16 @@ server:
   port: 8083
   servlet:
     context-path: /api/orders
-
+  
 spring:
   application:
     name: order-service
-  # config:
-  #   import: "optional:configserver:http://config-server:8888"
+  profiles:
+    active: dev
+  config:
+    import: "optional:configserver:http://config-server:8888"
 
-eureka:
-  instance:
-    prefer-ip-address: true
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://discovery-server:8761/eureka
-  server:
-    enable-self-preservation: false
-    wait-time-in-ms-when-sync-empty: 0
-    response-cache-update-interval-ms: 5000
-    dashboard:
-      enabled: true
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-      cors:
-        allowed-origins: "*"
-        allowed-methods: "*"
-  endpoint:
-    health:
-      show-details: always
-    info:
-      env:
-        enabled: true
-
-logging:
   level:
     root: INFO
     org:
