--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -10,7 +10,14 @@ spring:
     active: dev
   config:
     import: "optional:configserver:http://config-server:8888"
-
+  cloud:
+    config:
+      fail-fast: true
+      retry:
+        initial-interval: 1000
+        max-attempts: 10
+        max-interval: 5000
+        multiplier: 1.5
 
   level:
     root: INFO
