--- a/config-server/src/main/resources/config/discovery-server-dev.yml
+++ b/config-server/src/main/resources/config/discovery-server-dev.yml
@@ -4,6 +4,7 @@ server:
 spring:
   application:
     name: discovery-server
+    instance_id: ${spring.cloud.client.hostname}:${server.port}
   
 eureka:
   instance:
