--- a/config-server/src/main/resources/config/order-service-dev.yml
+++ b/config-server/src/main/resources/config/order-service-dev.yml
@@ -1,11 +1,10 @@
 server:
   port: 8083
-  servlet:
-    context-path: /api/orders
-
+ 
 spring:
   application:
     name: order-service
+    instance_id: ${spring.cloud.client.hostname}:${server.port}
 
 eureka:
   instance:
