--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,20 +1,7 @@
-server:
-  port: 0
-  
 spring:
   application:
     name: user-service
-  
-# Service Discovery (Eureka)
-eureka:
-  client:
-    service-url:
-      defaultZone: http://discovery-server:8761/eureka
-  instance:
-    prefer-ip-address: true
-  
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+  config:
+    import: "optional:configserver:http://config-server:8888"
+  profiles:
+    active: dev
