--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   config-server:
     build: ./config-server
     container_name: config-server
-    # ports:
-    #   - "8888:8888"
+    ports:
+      - "8888:8888"
     networks:
       - spring-net
  
@@ -24,8 +24,8 @@ services:
   order-service:
     build: ./order-service
     container_name: order-service
-    # ports:
-    #   - "8083:8083"
+    ports:
+      - "8083:8083"
     depends_on:
       config-server:
         condition: service_started
@@ -33,6 +33,20 @@ services:
         condition: service_started
     networks:
       - spring-net
+    develop:
+      watch:
+        - action: sync
+          path: ./order-service
+          target: /app
+          ignore:
+            - target/
+            - .git/
+            - .idea/
+            - .vscode/
+        - action: rebuild
+          path: ./order-service/pom.xml
+        - action: rebuild
+          path: ./order-service/Dockerfile
  
   api-gateway:
     build: ./api-gateway
