--- a/config-server/src/main/resources/config/api-gateway-prod.yml
+++ b/config-server/src/main/resources/config/api-gateway-prod.yml
@@ -6,11 +6,14 @@ spring:
     name: api-gateway
 
 eureka:
-  client:
-    service-url:
-      defaultZone: http://discovery-server:8761/eureka
   instance:
     prefer-ip-address: true
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://discovery-server:8761/eureka
 
 cloud:
   gateway:
