--- a/config-server/src/main/resources/config/api-gateway-dev.yml
+++ b/config-server/src/main/resources/config/api-gateway-dev.yml
@@ -6,27 +6,18 @@ spring:
     name: api-gateway
 
 eureka:
-  client:
-    service-url:
-      defaultZone: http://discovery-server:8761/eureka
   instance:
     prefer-ip-address: true
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://discovery-server:8761/eureka
 
 cloud:
   gateway:
     routes:
-      # - id: auth-service
-      #   uri: lb://auth-service
-      #   predicates:
-      #     - Path=/auth/**
-      #   filters:
-      #     - StripPrefix=1
-      # - id: user-service
-      #   uri: lb://user-service
-      #   predicates:
-      #     - Path=/users/**
-      #   filters:
-      #     - StripPrefix=1
       - id: order-service
         uri: lb://order-service
         predicates:
@@ -34,12 +25,6 @@ cloud:
         filters:
           - StripPrefix=1
           - PrefixPath=/api/orders
-      # - id: hotel-service
-      #   uri: lb://hotel-service
-      #   predicates:
-      #     - Path=/hotels/**
-      #   filters:
-      #     - StripPrefix=1
     discovery:
       locator:
         enabled: true
