--- a/config-server/src/main/resources/config/api-gateway-dev.yml
+++ b/config-server/src/main/resources/config/api-gateway-dev.yml
@@ -4,6 +4,20 @@ server:
 spring:
   application:
     name: api-gateway
+  cloud:
+    gateway:
+      routes:
+        - id: order-service
+          uri: lb://order-service
+          predicates:
+            - Path=/api/orders/**
+          filters:
+            - StripPrefix=2
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
+    
 
 eureka:
   instance:
@@ -14,21 +28,6 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://discovery-server:8761/eureka
-
-cloud:
-  gateway:
-    routes:
-      - id: order-service
-        uri: lb://order-service
-        predicates:
-          - Path=/orders/**
-        filters:
-          - StripPrefix=1
-          - PrefixPath=/api/orders
-    discovery:
-      locator:
-        enabled: true
-        lower-case-service-id: true
 
 management:
   endpoints:
