--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     container_name: order-service
     ports:
       - "8083:8083"
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
     depends_on:
       config-server:
         condition: service_started
@@ -53,6 +55,8 @@ services:
     container_name: api-gateway
     ports:
       - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
     depends_on:
       order-service:
         condition: service_started
