--- a/config-server/src/main/resources/config/order-service-dev.yml
+++ b/config-server/src/main/resources/config/order-service-dev.yml
@@ -1,17 +1,16 @@
 server:
   port: 8083
-
+  servlet:
+    context-path: /orders
 
 spring:
   application:
     name: order-service
-    instance_id: ${spring.cloud.client.hostname}:${server.port}
-
 
 eureka:
   instance:
     prefer-ip-address: true
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    instance-id: ${spring.application.name}:${spring.cloud.client.hostname}:${server.port}
   client:
     register-with-eureka: true
     fetch-registry: true
