--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -9,5 +9,10 @@ spring:
   cloud:
     config:
       server:
+        # git:
+        #   uri: https://github.com/shakil9/config-repo
+        #   default-label: main    # or master
+        #   search-paths: /
+        #   clone-on-start: true
         native:
           search-locations: classpath:/config
