--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,11 @@ services:
       - "8888:8888"
     networks:
       - spring-net
- 
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8888/actuator/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   discovery-server:
     build: ./discovery-server
@@ -17,58 +21,43 @@ services:
       - "8761:8761"
     depends_on:
       config-server:
-        condition: service_started
+        condition: service_healthy
     networks:
       - spring-net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8761/actuator/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   order-service:
     build: ./order-service
     container_name: order-service
     ports:
       - "8083:8083"
-    environment:
-      - SPRING_PROFILES_ACTIVE=dev
-      - SPRING_CLOUD_CONFIG_URI=http://config-server:8888
     depends_on:
       config-server:
-        condition: service_started
+        condition: service_healthy
       discovery-server:
-        condition: service_started
+        condition: service_healthy
     networks:
       - spring-net
-    # develop:
-    #   watch:
-    #     - action: sync
-    #       path: ./order-service
-    #       target: /app
-    #       ignore:
-    #         - target/
-    #         - .git/
-    #         - .idea/
-    #         - .vscode/
-    #     - action: rebuild
-    #       path: ./order-service/pom.xml
-    #     - action: rebuild
-    #       path: ./order-service/Dockerfile
- 
+
   api-gateway:
     build: ./api-gateway
     container_name: api-gateway
     ports:
       - "8080:8080"
-    environment:
-      - SPRING_PROFILES_ACTIVE=dev
-      - SPRING_CLOUD_CONFIG_URI=http://config-server:8888
     depends_on:
       order-service:
         condition: service_started
       config-server:
-        condition: service_started
+        condition: service_healthy
       discovery-server:
-        condition: service_started
+        condition: service_healthy
     networks:
       - spring-net
- 
+
 networks:
   spring-net:
     driver: bridge
