--- a/config-server/src/main/resources/config/application.yml
+++ b/config-server/src/main/resources/config/application.yml
@@ -1,7 +1,8 @@
-eureka:
-  client:
-    service-url:
-      defaultZone: http://discovery-server:8761/eureka
+# Config Server application.yml
+# eureka:
+#   client:
+#     service-url:
+#       defaultZone: http://discovery-server:8761/eureka
 
 
 management:
