--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,11 @@ services:
         condition: service_healthy
     networks:
       - spring-net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8083/actuator/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   api-gateway:
     build: ./api-gateway
@@ -50,13 +55,18 @@ services:
       - "8080:8080"
     depends_on:
       order-service:
-        condition: service_started
+        condition: service_healthy
       config-server:
         condition: service_healthy
       discovery-server:
         condition: service_healthy
     networks:
       - spring-net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 networks:
   spring-net:
