--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -12,6 +12,11 @@ RUN --mount=type=cache,target=/root/.m2 mvn -B -DskipTests package
 FROM eclipse-temurin:21-jre-jammy
 WORKDIR /app
 
+# Install curl for container healthcheck
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends curl \
+    && rm -rf /var/lib/apt/lists/*
+
 # Copy the built JAR from the builder stage
 COPY --from=builder /workspace/target/*.jar app.jar
 
