--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <!-- Actuator for health endpoint -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- Security -->
         <!-- <dependency>
             <groupId>org.springframework.boot</groupId>
