--- a/discovery-server/Dockerfile
+++ b/discovery-server/Dockerfile
@@ -16,12 +16,16 @@ RUN --mount=type=cache,target=/root/.m2 mvn -B -DskipTests package
 FROM eclipse-temurin:21-jre-jammy
 WORKDIR /app
 
+# Install curl for container healthcheck
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends curl \
+    && rm -rf /var/lib/apt/lists/*
+
 # Copy the built JAR from the builder stage
 COPY --from=builder /workspace/target/*.jar app.jar
 
-# Expose application port
-EXPOSE 8080
+# Expose Eureka server port
+EXPOSE 8761
 
 # Run the Spring Boot app
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
-
+ENTRYPOINT ["java", "-Dserver.port=8761", "-jar", "/app/app.jar"]
