--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,15 +38,18 @@ services:
     depends_on:
       config-server:
         condition: service_healthy
+        # condition: service_started
       discovery-server:
         condition: service_healthy
+        # condition: service_started
     networks:
       - spring-net
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8083/actuator/health"]
-      interval: 10s
+      test: ["CMD", "curl", "-f", "http://localhost:8083/orders/actuator/health"]
+      interval: 5s
       timeout: 5s
       retries: 5
+      start_period: 60s
 
   api-gateway:
     build: ./api-gateway
@@ -55,18 +58,19 @@ services:
       - "8080:8080"
     depends_on:
       order-service:
-        condition: service_healthy
+        condition: service_started
       config-server:
-        condition: service_healthy
+        condition: service_started
       discovery-server:
-        condition: service_healthy
+        condition: service_started
     networks:
       - spring-net
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
-      interval: 10s
+      interval: 5s
       timeout: 5s
       retries: 5
+      start_period: 15s
 
 networks:
   spring-net:
