--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,11 +45,11 @@ services:
     networks:
       - spring-net
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8083/actuator/health/readiness"]
+      test: ["CMD", "curl", "-f", "http://localhost:8083/orders/actuator/health"]
       interval: 5s
       timeout: 5s
       retries: 5
-      start_period: 60s
+      start_period: 15s
 
   api-gateway:
     build: ./api-gateway
@@ -66,7 +66,7 @@ services:
     networks:
       - spring-net
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health/readiness"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
       interval: 5s
       timeout: 5s
       retries: 5
