--- a/config-server/src/main/resources/config/order-service-dev.yml
+++ b/config-server/src/main/resources/config/order-service-dev.yml
@@ -18,30 +18,30 @@ eureka:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${spring.cloud.client.hostname}:${server.port}
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-      cors:
-        allowed-origins: "*"
-        allowed-methods: "*"
-  endpoint:
-    health:
-      show-details: always
-    info:
-      enabled: true
-  info:
-    env:
-      enabled: true
+# management:
+#   endpoints:
+#     web:
+#       exposure:
+#         include: "*"
+#       cors:
+#         allowed-origins: "*"
+#         allowed-methods: "*"
+#   endpoint:
+#     health:
+#       show-details: always
+#     info:
+#       enabled: true
+#   info:
+#     env:
+#       enabled: true
 
-logging:
-  level:
-    root: INFO
-    org:
-      springframework: INFO
-      springframework.cloud: INFO
-    com:
-      netflix:
-        eureka: INFO
-        discovery: INFO
+# logging:
+#   level:
+#     root: INFO
+#     org:
+#       springframework: INFO
+#       springframework.cloud: INFO
+#     com:
+#       netflix:
+#         eureka: INFO
+#         discovery: INFO
