--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,26 @@ services:
       timeout: 5s
       retries: 5
       start_period: 15s
+  
+  auth-service:
+    build: ./auth-service
+    container_name: auth-service
+    ports:
+      - "8081:8081"
+    depends_on:
+      config-server:
+        condition: service_healthy
+      discovery-server:
+        condition: service_healthy
+    networks:
+      - spring-net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/auth/actuator/health"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
+  
 
   api-gateway:
     build: ./api-gateway
@@ -57,6 +77,8 @@ services:
     ports:
       - "8080:8080"
     depends_on:
+      auth-service:
+        condition: service_healthy
       order-service:
         condition: service_healthy
       config-server:
