--- a/config-server/src/main/resources/config/order-service-dev.yml
+++ b/config-server/src/main/resources/config/order-service-dev.yml
@@ -7,6 +7,16 @@ server:
 spring:
   application:
     name: order-service
+  datasource:
+    url: jdbc:mysql://mysql-order:3306/hotel_management_db_order?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+    username: root
+    password: Shakib@40
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
 
 eureka:
   client:
