--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,13 +31,13 @@ services:
       timeout: 5s
       retries: 5
 
-  redis:
-    image: redis:7-alpine
-    container_name: redis
-    ports:
-      - "6379:6379"
-    networks:
-      - spring-net
+  # redis:
+  #   image: redis:7-alpine
+  #   container_name: redis
+  #   ports:
+  #     - "6379:6379"
+  #   networks:
+  #     - spring-net
 
   auth-service:
     build: ./auth-service
